--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,17 @@
     <title>TrackDailySteps</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-    <%= yield %>
+  <body>
+    <%= render 'layouts/header' %> 
+    <div class="container">
+      <%= render 'layouts/messages' %>
+      <%= yield =%>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
+</body>
 </html>
