add validations to Goal model

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <%= link_to "Facebook Clone",authenticated_root_path %></a>
+    <%= link_to "Track daily steps",authenticated_root_path %></a>
   </small>
   <nav>
     <ul>
