add end collumn to goals table

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -3,6 +3,8 @@
 <% for goal in @user_goals %>
   <%= goal.description =%> <br>
   <%= goal.start =%> <br>
+  <%= goal.start_time =%> <br>
+  <%= goal.performance =%> <br
   <%= link_to 'Goal', goal %>
 <% end %>
 
