--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,14 @@
 <h1> Selected project <h1>
 <%= @project.name=%><br/>
 <%= @project.description=%><br/>
+  <%= @project.start =%> <br>
+  <%= @project.end =%> <br>
+  <%= @project.startTime =%> <br>
+  <%= @project.workingTime =%> <br>
+  <%= @project.duration =%> <br>
+  <%= @project.performance =%> <br>
 <h2> project goals </h2>
-<% for project_goal in @project.goals %>
+<% for project_goal in @project_user_goals %>
   <h2> goal desc: </h2> 
   <%= project_goal.description=%><br/>
   <h2> goal user: </h2>
