fix Api devise problem

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,16 @@
 <header class="navbar navbar-light" style="background-color: #0a206b;">
   <div class="container">
-    <%= link_to "Activity", authenticated_root_path, id: "logo" %>
+    <h1 id="logo" >Track Daily Progress </h1>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to (fa_icon "home", text: "Home"), authenticated_root_path %></li>
         <% if user_signed_in? %>
+          <li> Logged in as: <%= current_user.name %> </li> 
+
           <li><%= link_to (fa_icon "sign-out", text: 'Log out'), destroy_user_session_path, method: :delete %></li> 
           
         <% else %>
           <li><%= link_to (fa_icon "sign-in", text: "Log_in"), new_user_session_path %></li> 
-          <li><%= link_to (fa_icon "sign-in", text: "Sign Up"), :unauthenticated_root %></li>
+          <li><%= link_to (fa_icon "sign-in", text: "Sign Up"), new_user_registration_path %></li>
           
         <% end %>
       </ul>
