--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,31 +4,12 @@
     <title>TrackDailySteps</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet">
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Ubuntu&display=swap" rel="stylesheet">    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
   <%= render 'layouts/header' %> 
-  <% if false %>
-    <% if !user_signed_in? %>
-      <main class="welcome ">
-        <header>
-        <%= render 'layouts/messages' %>
-          <nav class="nav">
-            <%= link_to 'Login', new_user_session_path, class: "nav__link" %>
-            <%= link_to (fa_icon "sign-in", text: "Sign Up"), new_user_registration_path %>
-            </nav>
-        </header>
-      </main>
-    <% else %>
-      <div class="container">
-        <%= render 'layouts/messages' %>
-        <%= yield %>
-      </div>
-    <% end %>
-    <% end%>
-    <%= yield %>
+  <%= yield %>
   </body>
 </html>
