add project component style

--- a/app/assets/stylesheets/gloabal.scss
+++ b/app/assets/stylesheets/gloabal.scss
@@ -169,3 +169,9 @@ i:hover {
 .icon-green{
   color:rgb(27, 218, 27)
 }
+
+// Project
+.project {
+  background: $blue-light-2x;
+  margin-bottom: 5%;
+}
