--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,2 +1,6 @@
-<h1> Welcome to daily tracking app</h1>
-<%= link_to "Sign up now!", new_user_registration_path %>
+<div class="container">
+  <h2 class="center" > welcome to your </h2>
+  <h1> <strong>Track Daily Progress</strong></h1>
+  <h2 class="center"> application</h2>
+  <h3 class="submitBtn center"><%= link_to "Sign up now!", new_user_registration_path %></h3>
+</div>
