fix rspec and message errors

--- a/app/assets/stylesheets/gloabal.scss
+++ b/app/assets/stylesheets/gloabal.scss
@@ -170,3 +170,12 @@ i:hover {
 .copy-right {
   font-size: 0.8em;
 }
+
+// messages
+.alert {
+  background-color: rgb(219, 112, 112)
+}
+
+.notice {
+  background-color: rgb(107, 214, 107);
+}
