--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
 <% if notice %> 
   <p class="notice"><%= notice %></p>
-<% elsif %>
+<% elsif alert %>
   <p class="alert"><%= alert %></p>
 <% end %>
