make a responsive form design

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -47,3 +47,9 @@ hr {
 .submitBtn:hover,.signUp:hover {
   opacity:1;
 }
+
+@media screen and (min-width: 1024px) {
+  .submitBtn, .signUp, input[type=text], input[type=password], input[type=email], textarea, input[type=datetime-local] {
+    width: 50%;
+  }
+}
