--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -2,5 +2,5 @@
   <h2 class="center" > welcome to your </h2>
   <h1> <strong>Track Daily Progress</strong></h1>
   <h2 class="center"> application</h2>
-  <h3 class="submitBtn center" style="margin-left:20%"><%= link_to "Sign up now!", new_user_registration_path %></h3>
+  <h3 class="welcome submitBtn center"><%= link_to "Sign up now!", new_user_registration_path %></h3>
 </div>
