--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,23 @@
-<% if notice %> 
-  <p class="notice"><%= notice %></p>
+<% if notice %>
+  <script>
+    # document.addEventListener('DOMContentLoaded', () => {
+    #   setTimeout(() => {
+    #   document.getElementById(message).slideUp();
+    #   }, 3000);
+    # });
+    
+  </script>
+  <p id="message" class="notice"><%= notice %></p>
+  <script>
+    setTimeout(() => {
+      document.getElementById("message").slideUp();
+      }, 3000);
+  </script>
 <% elsif alert %>
-  <p class="alert"><%= alert %></p>
+  <p id="message" class="alert"><%= alert %></p>
+  <script>
+    setTimeout(() => {
+      document.getElementById("message").slideUp();
+      }, 3000);
+  </script>
 <% end %>
