change apllication layout window title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TrackDailySteps</title>
+    <title>Track Daily Progress</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
