--- a/app/assets/stylesheets/circle.css
+++ b/app/assets/stylesheets/circle.css
@@ -43,7 +43,7 @@
   height: 85px;
   border-radius: 50%;
   background: #fff;
-  line-height: 80px;
+  line-height: 90px;
   text-align: center;
   margin-top: 7.5px;
   margin-left: 7.5px;
@@ -51,4 +51,9 @@
   z-index: 1;
   font-weight: 700;
   font-size: 1em;
+}
+@media screen and (min-width: 768px) {
+  .circle-wrap {
+    margin: 10px;
+  }
 }
