--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -3,3 +3,13 @@
 <% elsif alert %>
   <p id="message" class="alert"><%= alert %></p>
 <% end %>
+
+<% if notice || alert %>
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', () => {
+      setTimeout(() => {
+      document.getElementById('message').remove();
+      }, 5000);
+    });
+  </script>
+<% end %>
